--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "heroku-postbuild": "cd client && npm install --only=dev && npm install && npm run build",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
@@ -27,5 +28,9 @@
     "express-session": "^1.17.1",
     "mongoose": "^5.12.2",
     "path": "^0.12.7"
+  },
+  "engines": {
+    "node": "15.6.0",
+    "npm": "7.4.0"
   }
 }
